@@ -1,6 +1,9 @@
 nx-libs (2:3.5.0.15-0) UNRELEASED; urgency=low
 
-  * Continue development...
+  * Improve 020_add-nxagent-wrapper.full.patch: Properly set NX_TEMP, make
+    sure nxagent launches even with pam_tmpdir.so being in use.
+  * Improve 023_add-x2goagent-wrapper.full.patch: Properly set NX_TEMP, make
+    sure x2goagent launches even with pam_tmpdir.so being in use.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Jun 2012 14:54:51 +0200
 
